<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Основные настройки">
        <Preference
            android:key="start_activity_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category_management"
            android:summary="@string/category_management_desc"/>

        <ListPreference
            android:key="default_currency_type"
            android:icon="@drawable/ic_euro"
            android:title="@string/default_currency_type"
            android:summary="Тип валюты в котором будет отображаться общий баланс всех счетов"
            android:entries="@array/currency_type"
            android:entryValues="@array/currency_type"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Данные приложения">
        <Preference
            android:key="clear_data"
            android:icon="@drawable/ic_basket"
            android:title="@string/clear_data"
            android:summary="@string/clear_data_desc"/>
    </PreferenceCategory>
</PreferenceScreen>