<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/periwinkle_crayola"
    tools:context=".ui.accounts.detail.transaction.edit.TransactionEditActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_transaction_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right"
            android:background="@color/periwinkle_crayola"
            android:hint="@string/edit_transaction_title_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_transaction_description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right"
            android:background="@color/periwinkle_crayola"
            android:hint="@string/edit_transaction_description_hint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/category_text_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="right"
            android:text="@string/not_selected" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_time_text_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="right"
            android:text="@string/not_selected" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/edit_transaction_amount"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:ems="10"
            android:background="@color/periwinkle_crayola"
            android:gravity="right"
            android:layout_marginRight="8dp"
            android:inputType="textPersonName|text|numberDecimal"
            android:text="@string/def_value_opening_balance" />

        <TextView
            android:id="@+id/currency_type_text_view"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="RUB"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>